Fix Clean layers on mobile

--- a/src/inc/themes/clean/scss/_toolbar.scss
+++ b/src/inc/themes/clean/scss/_toolbar.scss
@@ -620,7 +620,7 @@
 			bottom: 0;
 			left: 0;
 			right: 0;
-			height: 100%;
+			height: calc(100% - 50px);
 			box-shadow: 0 5px 11px rgba(0, 0, 0, 0.2);
 		}				
 	}
